--- a/qt_skeleton/resources.qrc
+++ b/qt_skeleton/resources.qrc
@@ -1,8 +1,3 @@
 <RCC>
-    <qresource prefix="/">
-        <file>shaders/skeleton.frag</file>
-        <file>shaders/skeleton.vert</file>
-        <file>shaders/skeleton.tcs</file>
-        <file>shaders/skeleton.tes</file>
-    </qresource>
+    <qresource prefix="/"/>
 </RCC>
