--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -66,9 +66,9 @@ QGroupBox::title {
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>240</y>
+         <y>340</y>
          <width>181</width>
-         <height>22</height>
+         <height>41</height>
         </rect>
        </property>
        <property name="maximum">
@@ -79,9 +79,9 @@ QGroupBox::title {
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>220</y>
-         <width>181</width>
-         <height>16</height>
+         <y>300</y>
+         <width>191</width>
+         <height>31</height>
         </rect>
        </property>
        <property name="text">
@@ -92,9 +92,9 @@ QGroupBox::title {
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>100</y>
-         <width>181</width>
-         <height>16</height>
+         <y>115</y>
+         <width>191</width>
+         <height>41</height>
         </rect>
        </property>
        <property name="text">
@@ -105,9 +105,9 @@ QGroupBox::title {
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>120</y>
-         <width>50</width>
-         <height>64</height>
+         <y>160</y>
+         <width>111</width>
+         <height>121</height>
         </rect>
        </property>
        <property name="maximum">
@@ -147,7 +147,7 @@ QGroupBox::title {
          <x>20</x>
          <y>30</y>
          <width>181</width>
-         <height>21</height>
+         <height>41</height>
         </rect>
        </property>
        <property name="text">
@@ -155,6 +155,44 @@ QGroupBox::title {
        </property>
        <property name="checkable">
         <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="sBoxInnerTL">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>405</y>
+         <width>171</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>10</number>
+       </property>
+       <property name="value">
+        <number>5</number>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="sBoxOuterTL">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>460</y>
+         <width>171</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="maximum">
+        <number>10</number>
+       </property>
+       <property name="value">
+        <number>5</number>
        </property>
       </widget>
      </widget>
